k3s-manifests/cert-manager-setup.yaml
---
# Namespace for cert-manager
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
